--- a/lib/foo_web/controllers/page_html/home.html.heex
+++ b/lib/foo_web/controllers/page_html/home.html.heex
@@ -49,11 +49,10 @@
     <h1 class="text-brand mt-10 flex items-center text-sm font-semibold leading-6">
       Phoenix Framework
       <small class="bg-brand/5 text-[0.8125rem] ml-3 rounded-full px-2 font-medium leading-6">
-        v<%= Application.spec(:phoenix, :vsn) %>
+        v{Application.spec(:phoenix, :vsn)}
       </small>
-      <small class="bg-brand/5 text-[0.8125rem] ml-3 rounded-full px-2 font-medium leading-6">
-        built with Nix!
-      </small>
+
+      <img class="px-2 leading-6" src="https://builtwithnix.org/badge.svg" alt="Built with Nix" />
     </h1>
     <p class="text-[2rem] mt-4 font-semibold leading-10 tracking-tighter text-zinc-900 text-balance">
       Peace of mind from prototype to production.
